class24-eks/microservices-on-k8s/k8s-menifest-adv/04-voting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting
  namespace: craftista
  labels:
    app: voting
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voting
  template:
    metadata:
      labels:
        app: voting
        tier: backend
    spec:
      containers:
      - name: voting
        image: livingdevopswithakhilesh/microservices:voting-644625f8de627843afd6fc916bc30459705c2726
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config-volume
          mountPath: /app/application.properties
          subPath: application.properties
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1200m
            memory: 2Gi
        livenessProbe:
          httpGet:
            path: /api/origamis
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/origamis
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
      volumes:
      - name: config-volume
        configMap:
          name: voting-config
---
apiVersion: v1
kind: Service
metadata:
  name: voting
  namespace: craftista
  labels:
    app: voting
spec:
  type: ClusterIP
  selector:
    app: voting
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
